# bb_autoagent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
prompts/: grading_default.yaml  rubric_strict.yaml
src/: __init__.py  auth.py  csv_reader.py  gradebook.py  grader.py  main.py  submissions.py  utils.py
